docs: avance en prob distribuciones

--- a/docs/Matemáticas/Probabilidades y Estadística/01-fundamentos.mdx
+++ b/docs/Matemáticas/Probabilidades y Estadística/01-fundamentos.mdx
@@ -1,9 +1,9 @@
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 
-# Probabilidades y Estadística
+# Fundamentos de los modelos de probabilidad
 
-## Teoría de conjuntos
+## Álgebra de eventos
 
 ### Definiciones importantes
 
@@ -409,326 +409,8 @@ P\left(A \mid B\right)=\frac{P\left(B \mid A\right) \cdot P(A)}{P(B)}
 $$
 
 <Image
-  src="matematicas/probabilidades_estadistica/tree_diagram.png"
+  src="matematicas/probabilidades_estadistica/fundamentos/tree_diagram.png"
   alt="Diagrama de árbol"
   caption="Diagrama de árbol para dos eventos A y B"
   width="35%"
 />
-
-## Variables y distribuciones
-
-### Variables aleatorias
-
-Una **variable aleatoria** es el vehículo matemático para representar un evento en términos analíticos. El valor de una variable aleatoria puede estar definida para un conjunto de posibles valores.
-
-Si $X$ es una variable aleatoria, entonces
-
-$$
-X=x, \quad X<x, \quad X>x
-$$
-
-representa un evento, donde $(a<X<b)$ es el rango de valores posibles de $X$.
-La asignación numérica puede ser natural o artificial.
-
-Formalmente, una variable aleatoria puede ser considerada como una función o regla sobre los eventos del espacio muestral a un sistema numérico (o línea real).
-
-<Image
-  src="matematicas/probabilidades_estadistica/va.png"
-  alt="Variable aleatoria"
-  width="35%"
-/>
-
-Así, los eventos $E_1$ y $E_2$ pueden corresponder a
-
-$$
-\begin{aligned}
-E_1 & =(a<X \leq b) \\
-E_2 & =(c<X \leq d) \\
-\overline{E_1 \cup E_2} & =(X \leq a) \cup(X>d) \\
-E_1 \cap E_2 & =(c<X \leq b)
-\end{aligned}
-$$
-
-Una variable aleatoria puede ser **discreta** o **continua**.
-
-### Distribuciones de probabilidad
-
-Para los valores o rango de valores que puede tomar una variable aleatoria tienen asociados una probabilidad especifica o medidas de probabilidad. La regla que asigna las medidas de probabilidad se denomina **distribución o ley de probabilidad**.
-
-Si $X$ es variable aleatoria, la distribución de probabilidad puede ser descrita por su función de distribución de probabilidad acumulada denotada por:
-
-$$
-F_X(x)=P(X \leq x) \text { para todo } x \in \mathbb{R}
-$$
-
-Si $X$ es una variable aleatoria **discreta**, entonces esta función puede ser expresada a través de la función de probabilidad "puntual" denotada por
-
-$$
-p_X(x)=P(X=x)
-$$
-
-Así,
-
-$$
-F_X(x)=\sum_{x_i \leq x} P\left(X=x_i\right)=\sum_{x_i \leq x} p_X\left(x_i\right)
-$$
-
-con $x_i \in \Theta_X$ (soporte de $\left.X\right)$.
-
-Ahora, si $X$ es una variable aleatoria **continua**, las probabilidades están asociadas a intervalos de $x$. En este caso se define la función de densidad $f_X(x)$ tal que
-
-$$
-P(a<X \leq b)=\int_a^b f_X(x) d x
-$$
-
-y
-
-$$
-F_X(x)=P(X \leq x)=\int_{-\infty}^x f_X(t) d t
-$$
-
-con
-
-$$
-f_X(x)=\frac{d}{d x} F_X(x)
-$$
-
-Notar que
-
-$$
-P(x<X \leq x+d x)=f_X(x) d x
-$$
-
-<Image
-  src="matematicas/probabilidades_estadistica/caso_discreto_continuo.png"
-  alt="Caso discreto y continuo"
-  caption="Caso discreto y continuo"
-  width="65%"
-/>
-
-<Image
-  src="matematicas/probabilidades_estadistica/caso_mixto.png"
-  alt="Caso mixto"
-  caption="Caso mixto"
-  width="65%"
-/>
-
-### Propiedades
-
-1. $F_X(-\infty)=0$ y $F_X(\infty)=1$.
-2. $F_X(x) \geq 0$ para todo valor de $x$ y es no decreciente.
-3. $F_X(x)$ es continua por la derecha
-
-Para el caso continuo, la ecuación la podemos escribir como
-
-$$
-P(a<X \leq b)=\int_{-\infty}^b f_X(x) d x-\int_{-\infty}^a f_X(x) d x
-$$
-
-mientras que en el caso discreto
-
-$$
-P(a<X \leq b)=\sum_{x_i \leq b} p_X\left(x_i\right)-\sum_{x_i \leq a} p_X\left(x_i\right)
-$$
-
-es decir, para ambos casos
-
-$$
-P(a<X \leq b)=F_X(b)-F_X(a)
-$$
-
-## Medidas descriptivas de una variable aleatoria
-
-Una variable aleatoria puede ser descrita totalmente por su función de distribución de probabilidad o de densidad, o bien por su función de distribución de probabilidad acumulada. Sin embargo, en la práctica la forma exacta puede no ser totalmente conocida.
-
-En tales casos se requieren ciertas "medidas" para tener una idea de la forma de la distribución.
-
-### Medidas centrales
-
-En el rango de posibles valores de una variable aleatoria, existe un interés natural con respecto a los valores centrales, por ejemplo, el promedio.
-
-Consideremos una variable aleatoria $X$ con soporte $\Theta_X$.
-Como cada valor de $\Theta_X$ tiene una medida de probabilidad, el promedio ponderado es de especial interés.
-
-#### Valor esperado
-
-Al promedio ponderado se le llama también **valor medio** o **valor esperado** de la variable aleatoria $X$. Para una variable aleatoria $X$ se define el valor esperado, $\mu_X$, como:
-
-$$
-\mu_X=\mathrm{E}(X)= \begin{cases}\displaystyle\sum_{x \in \Theta_X} x \cdot p_X(x), & \text { Caso Discreto } \\[20pt]
-\displaystyle\int_{-\infty}^{\infty} x \cdot f_X(x) d x, & \text { Caso Continuo }\end{cases}
-$$
-
-Este valor existe siempre y cuando
-
-$$
-\sum_{x \in \Theta_X}|x| \cdot p_X(x)<\infty \quad \circ \quad \int_{-\infty}^{\infty}|x| \cdot f_X(x) d x<\infty
-$$
-
-#### Moda
-
-Es el valor más frecuente o con mayor probabilidad de ocurrencia. Para los casos discretos y continuos, tenemos que
-
-$$
-\begin{aligned}
-\text { Caso Discreto: } & \quad \text { Moda }=\max _{x \in \Theta_X} p_X(x) \\
-\text { Caso Continuo: } & \quad \text { Moda }=\max _{x \in \Theta_X} f_X(x)
-\end{aligned}
-$$
-
-#### Mediana
-
-Sea $x_{\text {med }}$ el valor que toma la mediana, entonces
-
-$$
-F_X\left(x_{\text {med }}\right)=1 / 2
-$$
-
-En resumen, el valor esperado de una variable aleatoria es un valor promedio que puede ser visto como un indicador del valor central de la distribución de probabilidad, por esta razón se considera como un parámetro de localización.
-
-Por otra parte, la mediana y la moda de una distribución también son parámetros de localización que no necesariamente son iguales a la media.
-
-:::tip[Nota]
-Cuando la distribución es simétrica, estas tres medidas son parecidas.
-:::
-
-### Medidas de posición
-
-#### Percentiles
-
-Si $x_p$ es el valor que toma el percentil $p \times 100 \%$, entonces $F_X\left(x_p\right)=$ $p$.
-
-Algunos casos particulares de percentil son: quintiles, cuartiles, deciles, mediana.
-
-:::tip[Nota]
-Los valores para cada tipo de percentil son:
-
-- Quintiles: $p=0.2$
-- Cuartiles: $p=0.25$
-- Deciles: $p=0.1$
-- Mediana: $p=0.5$
-  :::
-
-#### Esperanza matemática
-
-La noción del valor esperado como un promedio ponderado puede ser generalizado para funciones de la variable aleatoria $X$.
-Dada una función $g(X)$, entonces el valor esperado de esta puede ser obtenido como:
-
-$$
-E[g(X)]= \begin{cases}\displaystyle\sum_{x \in \Theta_X} g(x) \cdot p_X(x), & \text { Caso Discreto } \\[20pt]
-\displaystyle\int_{-\infty}^{\infty} g(x) \cdot f_X(x) d x, & \text { Caso Continuo }\end{cases}
-$$
-
-#### Función generadora de momentos
-
-La función generadora de momentos de una variable aleatoria $X$ se define como
-
-$$
-M_X(t)=\mathrm{E}[\exp (t X)]
-$$
-
-Esta función puede no estar definida para algunos valores de $t$, pero si existe en un intervalo abierto que contenga al cero, entonces esta función tiene la propiedad de determinar la distribución de probabilidad de $X$.
-
-Cuando esto último ocurra, esta función permite obtener el $r$-ésimo momento de $X$ de la siguiente forma
-
-$$
-M^{(r)}(0)=\mathrm{E}\left(X^r\right)
-$$
-
-### Medidas de dispersión
-
-Es de interés cuantificar el nivel de dispersión que tienen una variable aleatoria con respecto a un valor de referencia. Por ejemplo, nos podría interesar la distancia esperada de los valores de una variable aleatoria $X$ con respeto al valor esperado $\mu_X$, es decir, $\mathrm{E}\left[\left(X-\mu_X\right)\right]$.
-
-Esta idea de dispersión tiene el problema que siempre da como resultado cero.
-
-#### Varianza
-
-Una alternativa es utilizar la definición de **varianza**, es decir
-
-$$
-\begin{aligned}
-\sigma_X^2 & =\operatorname{Var}(X)=\mathrm{E}\left[\left(X-\mu_X\right)^2\right] \\
-& = \begin{cases}
-\displaystyle\sum_{x \in \Theta_X}\left(x-\mu_X\right)^2 \cdot p_X(x), & \text { Caso Discreto } \\[20pt]
-\displaystyle\int_{-\infty}^{\infty}\left(x-\mu_X\right)^2 \cdot f_X(x) d x, & \text { Caso Continuo }\end{cases} \\[30pt]
-& =\mathrm{E}\left(X^2\right)-\mu_X^2
-\end{aligned}
-$$
-
-#### Desviación estándar
-
-En términos de dimensionalidad, es conveniente utilizar la **desviación estandar**, es decir,
-
-$$
-\sigma_X=\sqrt{\operatorname{Var}(X)}
-$$
-
-#### Coeficiente de variación
-
-Ahora, si $\mu_X>0$, una medida adimensional de la variabilidad es el **coeficiente de variación** (c.o.v)
-
-$$
-\delta_X=\frac{\sigma_X}{\mu_X}
-$$
-
-#### Rango y IQR
-
-Las definiciones para el rango y el rango intercuartílico (IQR) son
-
-$$
-\begin{aligned}
-\text { Rango } & =\max -\min \\
-\mathrm{IQR} & =x_{0.75}-x_{0.25}
-\end{aligned}
-$$
-
-### Medidas de asimetría
-
-#### Skewness
-
-Se define una medida de asimetría (skewness) corresponde al tercer momento central:
-
-$$
-\mathrm{E}\left[\left(X-\mu_X\right)^3\right]= \begin{cases}
-\displaystyle\sum_{x_i \in \Theta_X}\left(x_i-\mu_X\right)^3 \cdot p_X\left(x_i\right), & \text { Caso Discreto } \\[20pt]
-\displaystyle\int_{-\infty}^{\infty}\left(x-\mu_X\right)^3 \cdot f_X(x) d x, & \text { Caso Continuo }\end{cases}
-$$
-
-#### Coeficiente de asimetría
-
-Una medida conveniente es el **coeficiente de asimetría** que se define como:
-
-$$
-\theta_X=\frac{E\left[\left(X-\mu_X\right)^3\right]}{\sigma_X^3}
-$$
-
-<Image
-  src="matematicas/probabilidades_estadistica/skewness.png"
-  alt="Skewness"
-  caption="Skewness"
-  width="55%"
-/>
-
-### Medidas de curtosis
-
-#### Curtosis
-
-Finalmente, el cuarto momento central se conoce como la curtosis
-
-$$
-\mathrm{E}\left[\left(X-\mu_X\right)^4\right]= \begin{cases}
-\displaystyle\sum_{x_i \in \Theta_X}\left(x_i-\mu_X\right)^4 \cdot p_X\left(x_i\right), & \text { Caso Discreto } \\[20pt]
-\displaystyle\int_{\infty}^{\infty}\left(x-\mu_X\right)^4 \cdot f_X(x) d x, & \text { Caso Continuo }\end{cases}
-$$
-
-que es una medida del "apuntamiento" o "achatamiento" de la distribución de probabilidad o de densidad.
-
-#### Coeficiente de curtosis
-
-Usualmente se prefiere el **coeficiente de curtosis**
-
-$$
-K_X=\frac{E\left[\left(X-\mu_X\right)^4\right]}{\sigma_X^4}-3
-$$
-
-## Distribuciones de probabilidad
